assets/css/toast.css
.toast_container {
    position: absolute;
    left: 50%;
    transform: translate(-50%, 0);
  }
  
  .toast_container ol {
    top: unset !important;
    left: unset !important;
    position: relative !important;
    max-width: unset !important;
  }
  
  .toast_container ol,
  .toast_container li {
    margin: 0;
    padding: 0;
    list-style: none;
  }
  
  .toast_container h1 {
    display: none;
  }
  
  .toast_container p {
    text-align: center;
    padding: 1.0rem;
    font-size: 40px;
    font-weight: 200;
    margin: 0;
    /* animation: flash-message 3.0s forwards; */
  }
  
  @keyframes flash-message {
    0% {
      font-size: 40px;
      opacity: 0.0;
    }
  
    20% {
      font-size: 50px;
      opacity: 0.6;
    }
  
    80% {
      font-size: 50px;
      opacity: 0.6;
    }
  
    100% {
      font-size: 50px;
      opacity: 0;
    }
  }
  
  .toasty-container {
    cursor: pointer;
  }
  
  .toasty-title {
    font-size: 1em;
    margin: 0;
  }
  
  .toasty-message {
    font-size: 0.9em;
    margin-top: 0.5em;
    margin-bottom: 0;
  }
  
  
  .animated {
    animation-duration: 1s;
    animation-fill-mode: both;
  }
  
  @keyframes bounceInRight {
  
    from,
    60%,
    75%,
    90%,
    to {
      animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
    }
  
    from {
      opacity: 0;
      transform: translate(0, 100px);
    }
  
    60% {
      transform: translate(0, -20px);
    }
  
    75% {
      opacity: 1;
      transform: translate(0, 8px);
    }
  
    90% {
      transform: translate(0, -4px);
    }
  
    to {
      transform: none;
    }
  }
  
  .bounceInRight {
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-name: bounceInRight;
  }
  
  @keyframes fadeOutRightBig {
    from {
      opacity: 1;
    }
  
    to {
      opacity: 0;
      transform: translate(0, -200px);
    }
  }
  
  .fadeOutRightBig {
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-name: fadeOutRightBig;
  }

